# jsonschema-diagram

./: .flake8  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: general.md
.github/actions/build-docs/: action.yml
.github/workflows/: auto-area-labels.yml  label-sync.yml  release.yml  reusable-test.yml  test.yml
backend/: __init__.py  app.py
docs/: cli.rst  conf.py  demo.rst  development.rst  getting-started.rst  index.rst  python-api.rst  requirements.txt  schema-support.rst  sphinx-extension.rst  troubleshooting.rst  viewer-modes.rst
docs/_static/: docs-theme.css
docs/examples/: pattern-catalog.json
jsonschema_diagram/: __init__.py  api.py  cli.py
jsonschema_diagram_sphinx/: __init__.py
jsonschema_diagram_sphinx/_static/: jsonschema_diagram_sphinx.css
schemas/: default.json
scripts/: build-embed.mjs
src/: App.tsx  main.tsx  setupTests.ts  styles.css  vite-env.d.ts
src/__tests__/: App.test.tsx  path-format.test.ts  schema-graph.test.ts
src/components/: DetailPanel.tsx  JsonCodeEditor.tsx  SchemaCanvas.tsx  SchemaNode.tsx  SchemaRelationEdge.tsx  SchemaSourcePanel.tsx  flow-types.ts
src/lib/: handle-ids.ts  layout.ts  path-format.ts  runtime-config.ts  schema-graph.ts  schema-loader.ts  schema-types.ts  schema-validation.ts  theme-presets.ts
src/test-support/: sampleSchema.ts
tests/: __init__.py  test_backend.py  test_python_api.py  test_sphinx_extension.py
