[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschema-diagram"
version = "0.1.0"
description = "Python API, CLI, and Sphinx integration for the JSON Schema Diagram viewer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = ["jinja2>=3.1"]

[project.optional-dependencies]
docs = ["sphinx>=8,<9"]

[project.scripts]
jsonschema-diagram = "jsonschema_diagram.cli:main"

[tool.setuptools]
packages = ["jsonschema_diagram", "jsonschema_diagram_sphinx", "backend"]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
  docs/_build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["docs/_build/*", "dist/*"]

[tool.mypy]
python_version = "3.10"
files = ["backend", "jsonschema_diagram", "jsonschema_diagram_sphinx", "tests", "docs/conf.py"]
exclude = "(docs/_build|dist)/"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["docutils", "docutils.*"]
ignore_missing_imports = true
