[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschema-diagram"
dynamic = ["version"]
description = "Python API, CLI, and Sphinx integration for the JSON Schema Diagram viewer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenAI Codex" }]
dependencies = ["jinja2>=3.1"]

[project.urls]
Homepage = "https://miskler.github.io/jsonschema-diagram/"
Documentation = "https://miskler.github.io/jsonschema-diagram/getting-started.html"
Repository = "https://github.com/Miskler/jsonschema-diagram"
Issues = "https://github.com/Miskler/jsonschema-diagram/issues"

[project.optional-dependencies]
docs = ["sphinx>=8,<9"]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "coverage",
    "build",
    "twine",
    "sphinx>=8,<9",
    "furo>=2024.8.6",
    "types-docutils",
]

[project.scripts]
jsonschema-diagram = "jsonschema_diagram.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "backend",
    "backend.*",
    "jsonschema_diagram",
    "jsonschema_diagram.*",
    "jsonschema_diagram_sphinx",
    "jsonschema_diagram_sphinx.*",
]
namespaces = false

[tool.setuptools.package-data]
jsonschema_diagram = ["data/*.json", "data/*.html"]
jsonschema_diagram_sphinx = ["_static/*.css"]

[tool.setuptools.dynamic]
version = { attr = "jsonschema_diagram._version.__version__" }

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
  docs/_build
  | dist
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["docs/_build/*", "dist/*"]

[tool.mypy]
python_version = "3.10"
files = ["backend", "jsonschema_diagram", "jsonschema_diagram_sphinx", "tests", "docs/conf.py"]
exclude = "(docs/_build|dist)/"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["docutils", "docutils.*"]
ignore_missing_imports = true
